# collectCD

./: .gitignore  README.md  pyproject.toml
collectcd/: migrate.py  run.py
collectcd/src/: app.py  config.py
collectcd/src/models/: Album.py  Artist.py  Collection.py  User.py  __init__.py
collectcd/src/shared/: Anthentication.py
collectcd/src/views/: AlbumView.py  ArtistView.py  CollectionView.py  UserView.py
seed/: 01_drop_and_create.sql  02_insert_artist.sql  03_insert_albums.sql  04_insert_collections.sql  drop_and_create.sql  insert_albums.sql  insert_artist.sql  seed.sql
tests/: test_collectcd.py
