[tool.poetry]
name = "collectCD"
version = "0.1.0"
description = ""
authors = ["yss <waku.pdxppxzy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Cerberus = "^1.3.2"
blueprint = "^3.4.2"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"
marshmallow = "^3.10.0"
flask-marshmallow = "^0.14.0"
Flask-Script = "^2.0.6"
Flask-Migrate = "^2.6.0"
marshmallow-sqlalchemy = "^0.24.2"
Flask-Bcrypt = "^0.7.1"
PyJWT = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# poetry add psycopg2でコケた場合
# $ xcode-select --install
# $ brew install openssl
# $ env LDFLAGS="-I/opt/homebrew/opt/openssl@1.1/include -L/opt/homebrew/opt/openssl@1.1/lib" poetry add psycopg2